--- a/src/package_files/default_action_manifests/ovras-team.advancedsettings_default_touch.json
+++ b/src/package_files/default_action_manifests/ovras-team.advancedsettings_default_touch.json
@@ -1,106 +1,90 @@
 {
-   "alias_info" : {},
-   "app_key" : "steam.overlay.1009850",
-   "bindings" : {
-      "/actions/haptic" : {
-         "haptics" : [
-            {
-               "output" : "/actions/haptic/out/hapticsleft",
-               "path" : "/user/hand/left/output/haptic"
-            },
-            {
-               "output" : "/actions/haptic/out/hapticsright",
-               "path" : "/user/hand/right/output/haptic"
+  "action_manifest_version": 0,
+  "alias_info": {},
+  "app_key": "steam.overlay.1009850",
+  "bindings": {
+    "/actions/haptic": {
+      "haptics": [
+        {
+          "output": "/actions/haptic/out/hapticsleft",
+          "path": "/user/hand/left/output/haptic"
+        },
+        {
+          "output": "/actions/haptic/out/hapticsright",
+          "path": "/user/hand/right/output/haptic"
+        }
+      ],
+      "sources": [
+        {
+          "inputs": {},
+          "mode": "none",
+          "path": "/user/hand/left/input/y"
+        },
+        {
+          "inputs": {},
+          "mode": "none",
+          "path": "/user/hand/right/input/b"
+        }
+      ]
+    },
+    "/actions/motion": {
+      "sources": [
+        {
+          "inputs": {
+            "click": {
+              "output": "/actions/motion/in/lefthandspaceturn"
             }
-         ],
-         "sources" : [
-            {
-               "inputs" : {},
-               "mode" : "none",
-               "path" : "/user/hand/left/input/y"
-            },
-            {
-               "inputs" : {},
-               "mode" : "none",
-               "path" : "/user/hand/right/input/b"
+          },
+          "mode": "button",
+          "path": "/user/hand/left/input/y"
+        },
+        {
+          "inputs": {
+            "click": {
+              "output": "/actions/motion/in/swapspacedragtolefthandoverride"
             }
-         ]
-      },
-      "/actions/system" : {
-         "sources" : [
-            {
-               "inputs" : {
-                  "click" : {
-                     "output" : "/actions/system/in/pushtotalk"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/left/input/trigger"
+          },
+          "mode": "button",
+          "path": "/user/hand/left/input/y"
+        },
+        {
+          "inputs": {
+            "click": {
+              "output": "/actions/motion/in/lefthandspacedrag"
             }
-         ]
-      },
-      "/actions/motion" : {
-         "sources" : [
-            {
-               "inputs" : {
-                  "click" : {
-                     "output" : "/actions/motion/in/lefthandspaceturn"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/left/input/y"
-            },
-            {
-               "inputs" : {
-                  "double" : {
-                     "output" : "/actions/motion/in/optionaloverridelefthandspacedrag"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/left/input/y"
-            },
-            {
-               "inputs" : {
-                  "click" : {
-                     "output" : "/actions/motion/in/swapspacedragtolefthandoverride"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/left/input/y"
-            },
-            {
-               "inputs" : {
-                  "click" : {
-                     "output" : "/actions/motion/in/righthandspaceturn"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/right/input/b"
-            },
-            {
-               "inputs" : {
-                  "double" : {
-                     "output" : "/actions/motion/in/optionaloverriderighthandspacedrag"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/right/input/b"
-            },
-            {
-               "inputs" : {
-                  "click" : {
-                     "output" : "/actions/motion/in/swapspacedragtorighthandoverride"
-                  }
-               },
-               "mode" : "button",
-               "path" : "/user/hand/right/input/b"
+          },
+          "mode": "button",
+          "path": "/user/hand/left/input/x"
+        },
+        {
+          "inputs": {
+            "click": {
+              "output": "/actions/motion/in/resetoffsets"
             }
-         ]
-      }
-   },
-   "controller_type" : "oculus_touch",
-   "description" : "",
-   "name" : "OVRAS Touch Default",
-   "options" : {},
-   "simulated_actions" : []
+          },
+          "mode": "button",
+          "path": "/user/hand/left/input/joystick"
+        }
+      ]
+    },
+    "/actions/system": {
+      "sources": [
+        {
+          "inputs": {
+            "click": {
+              "output": "/actions/system/in/pushtotalk"
+            }
+          },
+          "mode": "button",
+          "path": "/user/hand/left/input/trigger"
+        }
+      ]
+    }
+  },
+  "category": "steamvr_input",
+  "controller_type": "oculus_touch",
+  "description": "",
+  "name": "OVR Advanced Setting/Oculus Touch/ç∂éËëÄçÏê›íË",
+  "options": {},
+  "simulated_actions": []
 }
